--- a/SelfStart/SelfStartFrontEnd/public/assets/css/form-style.css
+++ b/SelfStart/SelfStartFrontEnd/public/assets/css/form-style.css
@@ -71,6 +71,7 @@ Form
 .cd-form input[type="email"],
 .cd-form input[type="password"],
 .cd-form input[type="date"],
+.cd-form input[type="number"],
 .cd-form textarea,
 .cd-form select,
 .cd-form legend {
@@ -86,6 +87,7 @@ Form
 .cd-form input[type="email"],
 .cd-form input[type="password"],
 .cd-form input[type="date"],
+.cd-form input[type="number"],
 .cd-form textarea,
 .cd-form select {
   /* general style for input elements */
@@ -99,6 +101,7 @@ Form
 .cd-form input[type="email"]:focus,
 .cd-form input[type="password"]:focus,
 .cd-form input[type="date"]:focus,
+.cd-form input[type="number"]:focus,
 .cd-form textarea:focus,
 .cd-form select:focus {
   outline: none;
@@ -313,6 +316,7 @@ Form
   .cd-form input[type="email"],
   .cd-form input[type="password"],
   .cd-form input[type="date"],
+  .cd-form input[type="number"],
   .cd-form textarea,
   .cd-form select {
     padding: 14px;
