--- a/SelfStart/SelfStartFrontEnd/app/templates/components/edit-patient.hbs
+++ b/SelfStart/SelfStartFrontEnd/app/templates/components/edit-patient.hbs
@@ -33,16 +33,21 @@
       </div>
 
       <div class="column " style="margin: 1em 0;">
-        <h4>Gender</h4>
-        <p class="cd-select icon">
-          <select class="people" onchange={{action 'selectGender' value="target.value"}}>
-            {{#each genderModel as |oneGender|}}
-              <option value={{oneGender.name}} selected={{eq pateintsData.gender oneGender.name}}>
-                {{oneGender.name}}
-              </option>
-            {{/each}}
-          </select>
-        </p>
+        <h4 >Gender</h4>
+
+
+          {{#ui-dropdown class="gender selection" onChange=(action (mut gender))}}
+            <div class="default text" style="color: black;">{{gender}}</div>
+            <i class="dropdown icon" id="selectIcon"></i>
+            <div class="menu">
+              {{#each genderModel as |oneGender|}}
+                <div data-value="{{oneGender.name}}" class="item">
+                  {{oneGender.name}}
+                </div>
+              {{/each}}
+            </div>
+          {{/ui-dropdown}}
+
       </div>
     </div>
 
@@ -56,7 +61,7 @@
 
     <div class="ui two column grid">
       <div class="column " style="margin: 1em 0;">        <label class="cd-label">Number</label>
-        {{input class="home" type="text" value = pateintsData.streetNumber required = true}}
+        {{input class="home" type="number" min="1" value = pateintsData.streetNumber required = true}}
       </div>
       <div class="column " style="margin: 1em 0;">
         <label class="cd-label">Street Name</label>
@@ -67,7 +72,7 @@
 
       <div class="ui two column grid">
         <div class="column " style="margin: 1em 0;">        <label class="cd-label" for="cd-name">Unit</label>
-          {{input class="bookmark" type="text" value = pateintsData.apartment}}
+          {{input class="bookmark" type="number" min="1" value = pateintsData.apartment}}
         </div>
 
         <div class="column " style="margin: 1em 0;">
@@ -79,20 +84,34 @@
 
     <div class="ui three column grid" id="grid">
       <div class="column " style="margin: 1em 0;">
-        <h4>Country</h4>
-        <p class="cd-select icon">
-          <select class="world" onchange={{action 'selectCountry' value="target.value"}}>
-            {{#each conutryModel as |oneCountry|}}
-              <option value={{oneCountry.name}} selected={{eq pateintsData.country oneCountry.name}}>
-                {{oneCountry.name}}
-              </option>
+        <h4 >Country</h4>
+
+        {{#ui-dropdown class="address selection" onChange=(action (mut country))}}
+          <div class="default text" style="color: black;">{{country}}</div>
+          <i class="dropdown icon" id="selectIcon"></i>
+          <div class="menu">
+            {{#each model as |country|}}
+              <div data-value="{{country.id}}" class="item">
+                {{country.name}}
+              </div>
             {{/each}}
-          </select>
-        </p>
+          </div>
+        {{/ui-dropdown}}
+
       </div>
       <div class="column " style="margin: 1em 0;">
         <h4>Province</h4>
-        {{input class="world" type="text" value = pateintsData.province placeholder="Province/State" required = true}}
+        {{#ui-dropdown class="address selection" onChange=(action (mut province))}}
+          <div class="default text" style="color: black;">{{province}}</div>
+          <i class="dropdown icon" id="selectIcon"></i>
+          <div class="menu">
+            {{#each provModel as |province|}}
+              <div data-value="{{province.id}}" class="item">
+                {{province.name}}
+              </div>
+            {{/each}}
+          </div>
+        {{/ui-dropdown}}
       </div>
       <div class="column " style="margin: 1em 0;">
         <h4>City</h4>
