--- a/SelfStart/SelfStartFrontEnd/app/templates/components/manage-patients.hbs
+++ b/SelfStart/SelfStartFrontEnd/app/templates/components/manage-patients.hbs
@@ -21,7 +21,7 @@
           </p>
         </div>
         <div class="right two wide column" style="padding-left: 30px;">
-          {{add-patient}}
+          {{add-patient flagAdd=flagAdd model=model}}
         </div>
       </div>
       <br><br><br><br>
@@ -33,10 +33,10 @@
 
             <div class="field">
               {{#ui-dropdown class="selection" selected=queryPath onChange=(action (mut queryPath))}}
-                <div class="default text">{{modelAttributes.firstObject.name}}</div>
+                <div class="default text">{{searchAttributes.firstObject.name}}</div>
                 <i class="dropdown icon"></i>
                 <div class="menu">
-                  {{#each modelAttributes as |attribute|}}
+                  {{#each searchAttributes as |attribute|}}
                     <div class="item" data-value="{{attribute.key}}">
                       {{attribute.name}}
                     </div>
@@ -89,19 +89,28 @@
           <tbody >
           {{#each patientsModel as |patient|}}
 
-            <tr{{action 'toggleDetail' patient.id}}>
-              <td class="left aligned one wide column ">
+            <tr>
+              <td class="left aligned one wide column" {{action 'toggleDetail' patient.id}}>
                 <img src="/assets/images/nav/single-01.svg" class="ui mini rounded image" />
+
               </td>
 
+
+
               {{#each modelAttributes as |column|}}
-                <td class={{column.class}}>
-                  {{get patient column.key}}
-                </td>
+
+                {{#if (eq column.key 'dateOfBirth' )}}
+                  <td class={{column.class}}> {{date-to-string date=(get patient column.key)}} </td>
+
+                {{else}}
+                  <td class={{column.class}} {{action 'toggleDetail' patient.id}}>
+                    {{get patient column.key}}
+                  </td>
+                {{/if}}
               {{/each}}
 
               <td class="right aligned one wide column ">
-                {{edit-patient  pateintsData=patient }}
+                {{edit-patient  pateintsData=patient model=model flagEdit=flagEdit}}
               </td>
               <td class="left aligned one wide column ">
                 <p >{{delete-patient ID=patient.id flagDelete=flagDelete}}</p>
