--- a/SelfStart/SelfStartFrontEnd/app/templates/components/client-settings.hbs
+++ b/SelfStart/SelfStartFrontEnd/app/templates/components/client-settings.hbs
@@ -17,7 +17,7 @@
       Profile
     </a>
     <a class="item" {{action "settingsClick"}} style=  {{OAC}}>
-      <i class="block icon settings"></i>
+      <i class="cog icon"></i>
       Account
     </a>
     <a class="item"{{action "historyClick"}}  style=  {{OHC}}>
@@ -25,7 +25,7 @@
       Transaction History
     </a>
     <a class="item"{{action "appointmentClick"}}  style=  {{OAPC}}>
-      <i class="calendar icon"></i>
+      <i class="book icon"></i>
       Appointment History
     </a>
     <!--<a class="item">-->
@@ -33,7 +33,7 @@
       <!--History-->
     <!--</a>-->
   </div>
-  <div class="pusher" style="min-height: 700px;">
+  <div class="pusher" style="height: 100%;">
     <form class="cd-form floating-labels"  style="padding-right: 10em;">
       {{#if onProfile}}
         <div class="ui basic segment">
@@ -132,11 +132,6 @@
               <label class="cd-label" for="cd-name">Phone Number</label>
               {{input class="phone" type="text" value = pateintsData.phoneNumber required = true}}
             </div>
-            <div class="five wide column" style="margin: 1em 0;">
-              <label class="cd-label" for="cd-email">Email</label>
-              {{input class="email" type="email" value = pateintsData.email required = true}}
-
-            </div>
 
           </div>
 
@@ -185,39 +180,49 @@
         </div>
       {{/if}}
       {{#if onHistory}}
-        <div class="ui basic segment">
-          <link integrity="" rel="stylesheet" href="{{rootURL}}../assets/css/form-style.css"> <!-- Resource style -->
+        <div class="ui container segment" id="top" style="margin-left: 0% !important;">
+          <div class="ui grid">
+            <div class="left thirteen wide column" style="margin-top: -5px;">
+              <p style="padding-top: 13px;color:  white;font-size: 1.5em;font-weight: bolder;">
+                Transaction History
+              </p>
+            </div>
+          </div>
+          <br><br><br><br>
 
-          <legend>Transaction History</legend>
-          <div class="ui one column grid">
-            <div class="five wide column " style="margin: 1em 0;">
-              <label class="cd-label">Old Password</label>
-              {{input class="user" type="password" value = oldPassword required = true}}
-            </div>
+          <div style="display: inline">
+            <table class="ui fixed table" style="border: none;border-color: white;">
+              <tbody >
+              <tr style="font-weight: bold;">
+                <th>Date</th>
+                <th>Price</th>
+                <th>type</th>
+              </tr>
+              </tbody>
+            </table>
           </div>
-          <div class="ui one column grid">
-            <div class="five wide column " style="margin: 1em 0;">
-              <label class="cd-label">New Password</label>
-              {{input class="user" type="password" value = newPassword required = true}}
-            </div>
-          </div>
-          <div class="ui one column grid">
-            <div class="five wide column " style="margin: 1em 0;">
-              <label class="cd-label">Confirm Password</label>
-              {{input class="user" type="password" value = confirmPassword required = true}}
-            </div>
-          </div>
-          <div class="ui hidden divider"></div>
 
-          <div class="three wide field">
-            <button class="fluid ui blue button" style="height: 50px;" {{action "savePassword"}}>
-              Save Changes
-            </button>
+          <div class="ui divider"></div>
+
+          <div  id="clientWindow" style="height:500px; overflow-y: scroll; overflow-x: hidden;">
+
+            <table class="ui fixed table" id="tb" style="margin: 0 0;border: none;">
+              <tbody >
+              {{#each appointmentHistory as |aHistory|}}
+                <tr>
+                  <td>{{aHistory.date}}</td>
+                  <td>{{aHistory.pName}}</td>
+                  <td>{{aHistory.reason}}</td>
+                </tr>
+              {{/each}}
+              </tbody>
+            </table>
           </div>
         </div>
+        <br><br><br><br>
       {{/if}}
       {{#if onAppointment}}
-      <div class="ui container segment" id="top" >
+      <div class="ui container segment" id="top" style="margin-left: 0% !important;">
         <div class="ui grid">
           <div class="left thirteen wide column" style="margin-top: -5px;">
             <p style="padding-top: 13px;color:  white;font-size: 1.5em;font-weight: bolder;">
